[metadata]
name = multi-freq-ldpy
version = 0.0.1
author = Héber H. Arcolezi
author_email = hh.arcolezi@gmail.com
description = Multiple Frequency Estimation Under Local Differential Privacy in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hharcolezi/multi-freq-ldpy

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = multi_freq_ldpy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src